Update project structure and enhance functionality
- Renamed project from "vite_react_shadcn_ts" to "commessa-control-hub" in package.json and package-lock.json.
- Added Prisma as an ORM dependency for database interaction.
- Updated Docker Compose configuration for PostgreSQL with new environment variables.
- Enhanced the Dashboard component to display aggregated data for commesse, including budget and consuntivo comparisons.
- Implemented CRUD functionalities for accounting entries, including update and delete operations with improved user experience.
- Updated README.md with installation instructions and project overview.
- Added new types for dashboard data management in index.ts.
- Improved UI components for better data presentation and user interaction.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ version: '3.8'
 # Server PostgreSQL generico per lo sviluppo locale
 services:
   postgres_dev:
-    image: postgres:15-alpine  # Usiamo l'immagine standard, vedi punto 2
+    image: postgres:15-alpine
     container_name: postgres_dev_server
     environment:
-      POSTGRES_USER: dev_user # Un utente generico per lo sviluppo
-      POSTGRES_PASSWORD: LaTuaPasswordSuperSicura # <-- CAMBIA QUESTA!
-      POSTGRES_DB: dev_main_db # Un database di default, ma ne creeremo altri
+      POSTGRES_USER: dev_user
+      POSTGRES_PASSWORD: Remotepass1
+      POSTGRES_DB: dev_main_db
     ports:
       - "5433:5432"
     volumes:
