--- a/.env
+++ b/.env
@@ -8,4 +8,8 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
-DATABASE_URL="postgresql://dev_user:Remotepass1@192.168.1.200:5433/dev_main_db?schema=public"
+# Ufficio:
+# DATABASE_URL="postgresql://dev_user:Remotepass1@192.168.1.200:5433/dev_main_db?schema=public"
+
+# Casa:
+DATABASE_URL="postgresql://dev_user:Remotepass1@localhost:5433/dev_main_db?schema=public"
