--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "lucide-react": "^0.468.0",
     "multer": "^1.4.5-lts.1",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
