--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.34.1",
     "vite": "^5.4.1"
   },
   "prisma": {
