--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "express": "^4.19.2",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
