--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.0",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "5.16.2",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -51,7 +52,6 @@
     "@tanstack/react-table": "^8.21.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.11",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -61,6 +61,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
+    "hono": "^4.8.2",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
@@ -88,7 +89,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.11",
+    "@types/multer": "^1.4.13",
     "@types/node": "^20.14.12",
     "@types/qs": "^6.14.0",
     "@types/react": "^18.3.3",
