--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "hono": "^4.8.2",
+    "iconv-lite": "^0.6.3",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
@@ -89,6 +90,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
+    "@types/iconv-lite": "^0.0.1",
     "@types/multer": "^1.4.13",
     "@types/node": "^20.14.12",
     "@types/qs": "^6.14.0",
