Modifiche alla configurazione e miglioramenti nella logica di importazione
- Aggiornato il file `.env` per riflettere il corretto `DATABASE_URL` per l'ambiente locale.
- Aggiunti nuovi principi guida nel piano di miglioramento del parser per garantire un'implementazione robusta e coerente.
- Aggiornato il file `schema.prisma` per allineare i campi `percentuale`, `validitaInizio` e `validitaFine` al parser Python.
- Rifattorizzata la logica di importazione in `importAnagrafiche.ts` per migliorare la gestione dei dati e l'errore di importazione.
- Aggiornati i decoders in `businessDecoders.ts` per riflettere le nuove definizioni e migliorare la chiarezza del codice.

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 # Ufficio:
-DATABASE_URL="postgresql://dev_user:Remotepass1@192.168.1.200:5433/dev_main_db?schema=public"
+# DATABASE_URL="postgresql://dev_user:Remotepass1@192.168.1.200:5433/dev_main_db?schema=public"
 
 # Casa:
-# DATABASE_URL="postgresql://dev_user:Remotepass1@localhost:5433/dev_main_db?schema=public"
+DATABASE_URL="postgresql://dev_user:Remotepass1@localhost:5433/dev_main_db?schema=public"
