--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "start:client": "vite preview",
     "start:server": "node server/dist/index.js",
     "lint": "eslint .",
+    "lint:import-engine": "eslint server/import-engine/**/*.ts",
+    "test:import-engine": "echo \"Error: no test specified for import-engine\" && exit 1",
+    "generate:import-types": "tsx -r dotenv/config server/import-engine/acquisition/generators/TypeGenerator.ts",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -80,8 +83,10 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.5",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.1",
-    "zod": "^3.23.8"
+    "winston": "^3.17.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -94,6 +99,8 @@
     "@types/qs": "^6.14.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
