--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
+    "form-data": "^4.0.3",
     "hono": "^4.8.2",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
