feat(tsconfig): update TypeScript configuration and enhance reconciliation logic
- Added support for resolving JSON modules and updated path mappings in TypeScript configuration files.
- Enhanced the reconciliation logic by including related testata data in the StagingRigaContabile model.
- Improved the reconciliation table component to handle row selection and display detailed information for selected entries.
- Refactored reconciliation-related components for better usability and streamlined data handling.
- Removed obsolete type definitions to clean up the codebase.

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,14 +4,15 @@
     "module": "ESNext",
     "lib": ["ES2022"],
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": ".",
+    "baseUrl": ".",
     "strict": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "declaration": false,
+    "declaration": true,
     "removeComments": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
@@ -22,16 +23,15 @@
     "moduleResolution": "node",
     "allowJs": true,
     "checkJs": false,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "paths": {
+      "@/*": ["../src/*"],
+      "@shared-types/*": ["../types/*"]
+    }
   },
   "ts-node": {
     "esm": true
   },
-  "include": [
-    "**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 } 
