--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ dist-ssr
 
 /generated/prisma
 .docs/dati_cliente/Trac_Doc_x_Imp-Exp_da_ASCII_in_Evol_14.9.5_18102017.zip
+
+# Generated js files
+prisma/**/*.js
+server/**/*.js
+*.js
+prisma/**/*.cjs
+server/**/*.cjs
+*.cjs
