--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "form-data": "^4.0.3",
