--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,11 +4,11 @@
     "outDir": "./dist/server",
     "module": "CommonJS",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "ts-node": {
-      "compilerOptions": {
-        "module": "CommonJS"
-      }
+    "esModuleInterop": true
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
     }
   },
   "include": ["server/**/*.ts", "prisma/**/*.ts"],
